# DEZoomcamp-2026

./: .gitignore  README.md  duckdb.db
01_docker_terraform/homework/: Dockerfile.notebook  README.md  dim_taxi_zone_ingest.py  docker-compose.yaml  facts_green_tripdata.py  notebook.ipynb  notebook_parquet.ipynb
01_docker_terraform/pipeline/: README.md  docker-compose.yaml  ingest_data.py  notebook.ipynb
01_docker_terraform/terraform/: README.md  main.tf  provider.tf  variables.tf
02_workflow_orchestration/: docker-compose.yaml
02_workflow_orchestration/homework/: 08_gcp_taxi.yaml  09_gcp_taxi_scheduled.yaml  README.md
03_data_warehouse/homework/: DLT_upload_to_GCP.ipynb  Dockerfile  README.md  Untitled.ipynb  load_yellow_taxi_data.py  pyproject.toml
04_analytics_engineering/dbt/: dbt_project.yml
04_analytics_engineering/dbt/models/marts/: fct_trips.sql
04_analytics_engineering/dbt/models/staging/: _bigquery_sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04_analytics_engineering/homework/: README.md
04_analytics_engineering/setup/: DLT_upload_to_GCP.ipynb  check_state.py  data_upload.py  data_upload_v2.py  docker-compose.yaml  pyproject.toml
05_data_platforms/homework/: README.md
05_data_platforms/nyc-taxi/: pipeline.yml
05_data_platforms/zoomcamp/pipeline/: pipeline.yml
workshop_01_dlt/homework/: README.md
workshop_01_dlt/my-dlt-pipeline/: open_library_pipeline.py  query.py
workshop_01_dlt/taxi-pipeline/: query.py  taxi_payment_methods_app.py  taxi_pipeline.py  taxi_total_tips_app.py
(+3 files in other folders)
